메인페이지에서 문의하기 누르면 마이페이지의 문의하기로 이동

--- a/src/main/webapp/static/css/design.css
+++ b/src/main/webapp/static/css/design.css
@@ -95,6 +95,18 @@ body {
 .btn:hover {
     background-color: #333;
 }
+
+.more-btn {
+    background: none;
+    border: none;
+    color: inherit;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: right;
+    float: right;
+}
+
 .link {
     margin-top: 10px;
     font-size: 14px;
